[gd_scene load_steps=10 format=3 uid="uid://dymjok0v7vruo"]

[ext_resource type="Script" path="res://scenes/home_screen.gd" id="1_4gna4"]
[ext_resource type="FontFile" uid="uid://ybq3qv0xtfu8" path="res://assets/kenney_ui-pack/Font/kenvector_future_thin.ttf" id="1_japkh"]
[ext_resource type="Texture2D" uid="uid://eqye8jr7uvkw" path="res://assets/kenney_ui-pack/PNG/red_button08.png" id="2_5wd86"]
[ext_resource type="Texture2D" uid="uid://cysokptfgfn28" path="res://assets/kenney_ui-pack/PNG/red_button09.png" id="3_km3fw"]

[sub_resource type="FontVariation" id="FontVariation_gbhl4"]
base_font = ExtResource("1_japkh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5dyca"]
texture = ExtResource("2_5wd86")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2qkd6"]
texture = ExtResource("2_5wd86")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qgaqh"]
texture = ExtResource("3_km3fw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ujcqh"]

[node name="HomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4gna4")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -62.0
offset_right = 163.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_gbhl4")
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxTexture_5dyca")
theme_override_styles/hover = SubResource("StyleBoxTexture_2qkd6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qgaqh")
theme_override_styles/focus = SubResource("StyleBoxTexture_ujcqh")

[node name="PlayLabel" type="Label" parent="PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -48.5
offset_right = 138.0
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_japkh")
theme_override_font_sizes/font_size = 85
text = "Play"
horizontal_alignment = 1

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_up" from="PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
